Changelog
  2005-04-18: ffnetdev-0.0.1
    - first version of ffnetdev
    
  2005-07-07: ffnetdev-0.0.2
    - splitted the main worker thread into two threads. One for VNC and one for TS streaming.
    - fixed busy-wait condition causing a high CPU load
    - revised the OSD code to support VNC protocol version 3.3 including truecolor mode.
    - added command line options for OSD(VNC) port, TS port and an option for explicitly enabling
      the plugin's remote control in VDR

  2005-07-20: ffnetdev-0.0.3
    - fixed Makefile so that "make dist" works
    - fixed a bug in osdworker.c which caused a double action on a single keypress (VNC)
    - added support for clients with bitsperpixel=8 and depth=8 
    - changed README: changed the required VDR version number to >= 1.3.18 due to changes in cDevice
    - changed README: added a short description of supported VNC features
    - added support for the bigEndian flag in VNC SetPixelFormat Message
    - added support for bitsperpixel=32
    - cleanup of debug output    
    
  2005-08-27: ffnetdev-0.0.4
    - fixed PES2TS remuxer: PES packets shorter than TS payload size(184 bytes) did not have the PUSI
      (payload unit start indicator) flag set
    - reworked PES2TS remuxer code and added a mutex to synchronize input ringbuffer access

  2006-02-20: ffnetdev-0.1.0
    - optimize for DBOX2-Plugin VDR-Viewer https://developer.berlios.de/projects/vdrviewer/ (tested with vdrviewer-0.1.1)
    - add VNC compression (RRE, Hextile)
    - start learning remote if accept client, no more if start plugin
    - added "auto change primary DVB" feature (enable/deisable in plugin settings)
    - fixed buffer overflow bug
    - fixed several other bugs
    - tested with vdr-1.3.43